--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@
   position: relative;
   z-index: 2;
   width: 100%;
-  padding: calc(var(--nav-h) + var(--banner-h) + var(--sp-12)) var(--gutter) var(--sp-16);
+  padding: calc(var(--nav-h) + var(--banner-h) + var(--sp-4)) var(--gutter) var(--sp-16);
 }
 @media (min-width: 720px) {
   .hero__inner { padding-inline: 0; padding-bottom: var(--sp-20); }
